# DevNet

./: .dockerignore  .gitignore  CLAUDE.md  FUNDING.json  MANIFEST.in  README.md  pyproject.toml
Developer/: CONTRIBUTING.md  DEVELOPMENT_SETUP.md  GOOD_FIRST_ISSUES.md  ROADMAP.md  feasibility-report.md
Developer/discussion/: add-filecoin-support.md  migrate_to_foundy.md
Developer/issues/: DifferentialPrivacy.md  auditor-evaluation-mechanism.md  client-data-labeling.md  client-reward-mechanism.md  client-training.md  containerization.md  decentralized-governance.md  dp-governance-review-starter-task.md  filecoin-integration.md  indexer.md  scoring-mechanism.md  staking-infrastructure.md  staking-mechanism.md  tokenomics.md  upgradable-contracts.md  validator-operations.md  validator-reward-mechanism.md  validator_selection.md
Developer/rejected-ideas/: tknn-shapley.md
Developer/tasks/: task_240626_0a.md  task_240626_0b.md  task_290626_1.md  task_300626_3.md
Developer/tooling/: client-labeling.md  model-owner-contracts.md  model-owner-services.md
Documentation/: GettingStarted.md  dindao.md  manifest.md  model-owner.md  services.md
Documentation/technical/: DINCLI_Containerizaton_Guide.md  DINCLI_TESTING_GUIDE.md  DINModelRegistry.md  DINShared.md  DINTaskAuditor.md  DINTaskCoordinator.md  DinCoordinator.md  DinToken.md  DinValidatorStake.md  manifest.md  requirements.md
cache_model_0/: manifest.json
cache_model_0/abis/: DINTaskAuditor.json  DINTaskCoordinator.json
cache_model_0/services/: aggregator.py  auditor.py  client.py  scoring.py
cid_services/: distribute_mnist.py
cid_services/requirements/: distribute_mnist.txt
dincli/: main.py
dincli/abis/: DINModelRegistry.json  DINTaskAuditor.json  DINTaskCoordinator.json  DinValidatorStake.json
dincli/cli/: aggregator.py  auditor.py  client.py  context.py  contract_utils.py  dindao.py  dintoken.py  modelowner.py  system.py  task.py  utils.py  worker.py
dincli/config/: accounts.json  cid_services.json  din_info.json
dincli/services/: auditor.py  client.py  ipfs.py  (+1 more)
tests/: test_cache_client_dp.py  test_dintoken.py  test_ipfs_config.py
(+46 files in other folders)
