[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dincli"
version = "0.1.0"
description = "Command-line interface for Decentralized Intelligence Network"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Umer Majeed", email = "umermjd11@gmail.com"},
  { name = "Abraham Nash", email = "abrahamnash@protonmail.com"}
]
license = { text = "MIT" }
keywords = ["blockchain", "federated-learning", "privacy", "cli", "fastapi", "DIN"]

dependencies = [
  "typer>=0.9.0",
  "python-dotenv>=1.0.0",
  "web3>=6.0.0",
  "platformdirs>=4.3.0",
  "py-cid>=0.5.0"

]

[project.scripts]
dincli = "dincli.main:app"

# ✅ Let setuptools auto-find packages (including 'dincli')
[tool.setuptools.packages.find]
where = ["."]  # look in project root
include = ["dincli*"]  # only include dincli and subpackages

[tool.setuptools.package-data]
dincli = ["config/*.json", "abis/*", "docker/*"]
